@@ -55,6 +55,8 @@ CAY-2275 Documentation: tutorial is out of sync with 4.0.M5 version
 CAY-2276 PrePersist listener registered as PostPersist in LifecycleCallbackRegistry.addListener(Class<?>, LifecycleListener)
 CAY-2279 cdbimport: skip PK comparison for VIEWs
 CAY-2281 ObjEntity attribute overrides are never deleted
+CAY-2284 Expression likeIgnoreCase can't handle unicode chars in in-memory evaluation
+
 ----------------------------------
 Release: 4.0.M5
 Date: March 6, 2017
